fix: no wrapping of text on small sizes

--- a/src/globalGridExamples.css
+++ b/src/globalGridExamples.css
@@ -9,4 +9,5 @@
     overflow: hidden;
     text-overflow: ellipsis;
     text-align: center;
+	white-space: nowrap;
   }
